styling layout bug fixed

--- a/src/styles/GameInput.module.scss
+++ b/src/styles/GameInput.module.scss
@@ -17,6 +17,7 @@
   // Min recommended button size
   margin: 0.1em !important;
   border-bottom: 1px solid #000000 !important;
+  font-weight: 600;
 }
 .backBtn {
   background-image: url('/icons/backspace.svg') !important;
