--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,12 +1,18 @@
 html,
 body {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: content-box;
+  max-height: 96vh;
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: #333;
-  padding: 0;
   margin: 0;
-  font-family: 'Montserrat', Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 2vh 0;
+  overflow-y: hidden;
+  font-family: Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
